# rawrtc

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  RELEASING.md  Readme.md  format-all.sh  gcc-arm.cmake  make-dependencies.sh  meson.build  meson_options.txt
.circleci/: config.yml
Docker/: Dockerfile  README.md
htdocs/: adapter-0.2.10.js  sdp.js  sdputils.js  webrtc-anyrtc.html  webrtc-anyrtc.js  webrtc-rawrtc.html  webrtc-rawrtc.js  webrtc.html
htdocs/ortc/: index.html  sdp.js
htdocs/webrtc/: index.html  peerconnection.js  signaling.js
include/: meson.build  rawrtc.h
include/rawrtc/: certificate.h  config.h.in  dtls_fingerprint.h  dtls_parameters.h  dtls_transport.h  ice_candidate.h  ice_gather_options.h  ice_gatherer.h  ice_parameters.h  ice_server.h  ice_transport.h  main.h  meson.build  peer_connection.h  peer_connection_configuration.h  peer_connection_description.h  peer_connection_ice_candidate.h  peer_connection_state.h  sctp_redirect_transport.h  sctp_transport.h  utils.h
src/: CMakeLists.txt  meson.build
src/certificate/: certificate.c  certificate.h  meson.build  utils.c
src/diffie_hellman_parameters/: meson.build  parameters.c  parameters.h
src/dtls_fingerprint/: attributes.c  fingerprint.c  fingerprint.h  meson.build
src/dtls_parameters/: attributes.c  parameters.c  parameters.h  utils.c
src/dtls_transport/: attributes.c  external.c  meson.build  transport.c  transport.h  utils.c
src/ice_candidate/: attributes.c  candidate.c  candidate.h  helper.c  helper.h  meson.build  resolver.c  resolver.h  utils.c
src/ice_gather_options/: meson.build  options.c  options.h  utils.c
src/ice_gatherer/: attributes.c  gatherer.c  gatherer.h  meson.build  utils.c
src/ice_parameters/: attributes.c  meson.build  parameters.c  parameters.h  utils.c
src/ice_server/: address.c  address.h  meson.build  resolver.c  resolver.h  server.c  server.h  utils.c
src/ice_transport/: attributes.c  meson.build  transport.c  transport.h  utils.c
src/include/: CMakeLists.txt  anyrtc.h  meson.build  rawrtc.h  rawrtc_internal.h  rawrtc_internal.h.cmakein
src/libanyrtc/: CMakeLists.txt  candidate_helper.c  candidate_helper.h  certificate.c  certificate.h  crc32c.h  data_channel.c  data_channel_parameters.c  data_channel_parameters.h  data_transport.c  data_transport.h  dtls_parameters.c  dtls_parameters.h  dtls_transport.c  dtls_transport.h  ice_candidate.c  ice_candidate.h  ice_gatherer.c  ice_gatherer.h  ice_parameters.c  ice_transport.c  init.c  main.c  main.h  meson.build  message_buffer.c  message_buffer.h  null.c  redirect_transport.c  redirect_transport.h  sctp_data_channel.c  sctp_data_channel.h  sctp_transport.c  sctp_transport.h  utils.c  utils.h
src/librawrtc/: CMakeLists.txt  candidate_helper.c  candidate_helper.h  certificate.c  certificate.h  config.c  config.h  crc32c.c  crc32c.h  data_channel.c  data_channel.h  data_channel_options.c  data_channel_parameters.c  data_channel_parameters.h  data_transport.c  data_transport.h  debug.h  diffie_hellman_parameters.c  diffie_hellman_parameters.h  dtls_parameters.c  dtls_parameters.h  dtls_transport.c  dtls_transport.h  ice_candidate.c  ice_candidate.h  ice_gather_options.c  ice_gather_options.h  ice_gatherer.c  ice_gatherer.h  ice_parameters.c  ice_parameters.h  ice_server.c  ice_server.h  ice_server_url_address.c  ice_server_url_address.h  ice_server_url_resolver.c  ice_server_url_resolver.h  ice_transport.c  ice_transport.h  main.c  (+32 more)
src/main/: config.c  config.h  main.c  main.h  meson.build
src/peer_connection/: attributes.c  connection.c  connection.h  meson.build
src/peer_connection_configuration/: configuration.c  configuration.h  meson.build
src/peer_connection_description/: attributes.c  description.c  description.h  meson.build  utils.c
src/peer_connection_ice_candidate/: attributes.c  candidate.c  candidate.h  meson.build  utils.c
src/peer_connection_state/: meson.build  state.c
src/sctp_common/: common.c  common.h  meson.build
src/sctp_redirect_transport/: transport.c
src/sctp_transport/: meson.build  transport.c
src/tools/: CMakeLists.txt  data-channel-sctp-echo.c  data-channel-sctp-loopback.c  data-channel-sctp-streamed.c  data-channel-sctp-swap-dtls-transport.c  data-channel-sctp-throughput.c  data-channel-sctp-ws-echo.c  data-channel-sctp-ws-process.c  data-channel-sctp.c  dtls-transport-loopback.c  dtls-transport.c  ice-gatherer.c  ice-transport-loopback.c  ice-transport.c  meson.build  peer-connection.c  redirect-sctp.c  redirect-transport-interop.c  redirect-transport.c  sctp-redirect-transport.c  sctp-transport-loopback.c  sctp-transport.c
src/tools/helper/: CMakeLists.txt  common.c  common.h  handler.c  handler.h  parameters.c  parameters.h  utils.c  utils.h
src/utils/: meson.build  utils.c  utils.h
subprojects/: rawrtcc.wrap  rawrtcdc.wrap  re.wrap  rew.wrap  usrsctp.wrap
tools/: data-channel-sctp-echo.c  data-channel-sctp-loopback.c  data-channel-sctp-streamed.c  data-channel-sctp-throughput.c  data-channel-sctp.c  dtls-transport-loopback.c  ice-gatherer.c  ice-transport-loopback.c  meson.build  peer-connection.c  sctp-redirect-transport.c
tools/helper/: common.c  common.h  handler.c  handler.h  meson.build  parameters.c  parameters.h  utils.c  utils.h
