sources = []

subdir('certificate')
subdir('diffie_hellman_parameters')
subdir('dtls_fingerprint')
subdir('dtls_parameters')
subdir('dtls_transport')
subdir('ice_candidate')
subdir('ice_gather_options')
subdir('ice_gatherer')
subdir('ice_parameters')
subdir('ice_server')
subdir('ice_transport')
subdir('main')
subdir('peer_connection')
subdir('peer_connection_configuration')
subdir('peer_connection_description')
subdir('peer_connection_ice_candidate')
subdir('peer_connection_state')
subdir('sctp_common')
if get_option('sctp_redirect_transport')
    subdir('sctp_redirect_transport')
endif
subdir('sctp_transport')
subdir('utils')
